<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="@dimen/size_spacing_30"
                    android:layout_marginTop="@dimen/size_spacing_30"
                    android:src="@drawable/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_spacing_30"
                    android:layout_marginTop="@dimen/size_spacing_50"
                    android:text="@string/my_comment_title"
                    android:textColor="@color/yellow_500"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_back" />

                <TextView
                    android:id="@+id/tv_subtitle_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_spacing_30"
                    android:layout_marginTop="@dimen/size_spacing_12"
                    android:text="@string/my_comment_subtitle_one"
                    android:textColor="@color/grey_700"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_spacing_12"
                    android:textColor="@color/purple_700"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/tv_subtitle_one"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:text="닉네임" />

                <TextView
                    android:id="@+id/tv_subtitle_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_spacing_12"
                    android:text="@string/my_comment_subtitle_two"
                    android:textColor="@color/grey_700"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@id/tv_nickname"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <TextView
                    android:id="@+id/tv_subtitle_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_comment_third"
                    android:textColor="@color/grey_700"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@id/tv_subtitle_one"
                    app:layout_constraintTop_toBottomOf="@id/tv_subtitle_one" />

                <TextView
                    android:id="@+id/tv_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_spacing_3"
                    android:text="@string/my_comment_recent"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_sort_rate"
                    app:layout_constraintEnd_toStartOf="@id/tv_divide_one" />

                <TextView
                    android:id="@+id/tv_divide_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_spacing_3"
                    android:layout_marginBottom="2dp"
                    android:text="@string/my_comment_divide"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_sort_rate"
                    app:layout_constraintEnd_toStartOf="@id/tv_sort_like"
                    app:layout_constraintTop_toTopOf="@id/tv_sort_rate" />

                <TextView
                    android:id="@+id/tv_sort_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_spacing_3"
                    android:text="@string/my_comment_sort_like"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_sort_rate"
                    app:layout_constraintEnd_toStartOf="@id/tv_divide_second" />

                <TextView
                    android:id="@+id/tv_divide_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_spacing_3"
                    android:layout_marginBottom="2dp"
                    android:text="@string/my_comment_divide"
                    android:textColor="@color/grey_200"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_sort_rate"
                    app:layout_constraintEnd_toStartOf="@id/tv_sort_rate"
                    app:layout_constraintTop_toTopOf="@id/tv_sort_rate" />

                <TextView
                    android:id="@+id/tv_sort_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_spacing_10"
                    android:text="@string/my_comment_sort_rate"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/iv_line"
                    app:layout_constraintEnd_toEndOf="@id/iv_line" />

                <ImageView
                    android:id="@+id/iv_line"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/size_spacing_30"
                    android:layout_marginTop="@dimen/size_spacing_50"
                    android:layout_marginEnd="@dimen/size_spacing_30"
                    android:scaleType="fitXY"
                    android:src="@drawable/purple_horizontal_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_subtitle_third" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_mycomment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_spacing_30"
                    android:layout_marginTop="@dimen/size_spacing_20"
                    android:layout_marginEnd="@dimen/size_spacing_30"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_line"
                    tools:listitem="@layout/item_my_comment" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
