<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/size_spacing_20"
            android:layout_marginTop="@dimen/size_spacing_20"
            android:src="@drawable/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_spacing_30"
            android:text="@string/agree_second_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_cancel"
            app:layout_constraintTop_toBottomOf="@id/iv_cancel" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/size_spacing_20"
            android:layout_marginTop="@dimen/size_spacing_10"
            android:layout_marginEnd="@dimen/size_spacing_20"
            app:layout_constraintBottom_toTopOf="@id/tv_next"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_second_content_first"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="@id/tv_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/yellow_300"
            android:gravity="center"
            android:text="@string/agree_second_next"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
